Fixed paths and typo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 <body>
-  <script type="module" src="extracttype.js"></script>
-  <script type="module" src="tests/tests.js"></script>
   <script type="module">
-    import run from 'tests';
+    import run from './tests/tests.js';
     window.runTests = run;
     run();
   </script>
